fix: page three mobile layout bug

--- a/src/scss/components/_normalForm.scss
+++ b/src/scss/components/_normalForm.scss
@@ -21,6 +21,7 @@
     @include font(0);
     margin-top: 24px;
     width: 100%;
+    max-width: 350px;
   }
 
   &__label {
@@ -75,8 +76,16 @@
   &__combine--1-1 {
     @extend %flex;
     justify-content: space-between;
+    .normalForm__group {
+      max-width: 158px;
+    }
     .normalForm__group:nth-child(2) {
       margin-left: 30px;
+    }
+    @include desktop {
+      .normalForm__group {
+        max-width: 350px;
+      }
     }
   }
 
